<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/accedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/accedi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/benvenuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benuvenuto_in_greenmarket"
            android:textColor="#AEAEAE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEmailLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/angoli_arrotondati"
            android:ems="10"
            android:hint="@string/il_tuo_indirizzo_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/PasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/angoli_arrotondati"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/la_tua_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <ImageView
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_visibility_off" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAccediLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/accediButton"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPassDimenticata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_dimenticata"
                android:textAlignment="center"
                android:textColor="#AEAEAE"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRegistratiLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/registrati"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>