...
                        android:text="€50"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/converti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#4CAF50"
                    android:text="Converti in punti" />

...
                        android:layout_height="wrap_content"
                        android:text="Punti: "
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/valore_punti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>
...
