...
                    android:layout_height="wrap_content"
                    android:text="Scopri subito la tua"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/tessPt_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#4CAF50"
                    android:text="Tessera Punti"
                    tools:ignore="MissingConstraints" />
...
